testsuite/tests/properties/invalid_node_builder/bad_kwarg_type_2.lkt
import common_nonempty

class Example: BaseExample {
    @lazy prop: SynthNode = SynthNode.builder(
        number=1,
        f1=null[Literal],
        f2=null[Literal].to_builder()
    ).build()
}
